--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-portfolio",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://Ritik26052000.github.io/react-gh-pages",
+  "homepage": "https://Ritik26052000.github.io/Ritik26052000.github.io",
   "type": "module",
   "scripts": {
     "dev": "vite",
