--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "bootstrap": "^5.3.3",
+    "emailjs": "^4.0.3",
+    "emailjs-com": "^3.2.0",
     "lottie-react": "^2.4.0",
+    "pdfjs-dist": "^4.5.136",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.4",
+    "react-bootstrap": "^2.2.1",
     "react-dom": "^18.3.1",
     "react-github-calendar": "^4.2.2",
     "react-icons": "^5.3.0",
