--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "axios": "^1.7.6",
     "bootstrap": "^5.3.3",
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
@@ -21,12 +22,14 @@
     "pdfjs-dist": "^4.5.136",
     "react": "^18.3.1",
     "react-bootstrap": "^2.2.1",
+    "react-daisyui": "^5.0.4",
     "react-dom": "^18.3.1",
-    "react-github-calendar": "^4.2.2",
+    "react-github-calendar": "^4.3.0",
     "react-icons": "^5.3.0",
     "react-parallax-tilt": "^1.7.236",
     "react-pdf": "^9.1.0",
     "react-router-dom": "^6.26.1",
+    "react-scroll": "^1.9.0",
     "react-spinners": "^0.14.1",
     "typewriter-effect": "^2.21.0"
   },
